<resources>
    <string name="app_name">SunnyWeather</string>
    <string name="search_city">输入搜索城市</string>
    <string name="no_weather_bg">noWeatherBg</string>
    <string name="weather_icon">weather_icon</string>
    <string name="circle_corner_bg">circleCornerBg</string>
    <string name="life_index">生活指数</string>
    <string name="forecast">预报</string>
    <string name="cold_risk_title">感冒</string>
    <string name="dress_title">穿衣</string>
    <string name="ultraviolet_title">实时紫外线</string>
    <string name="car_washing_title">洗车</string>

</resources>