<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/life_index"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cold_risk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/dress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tile">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/cold_risk_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_coldrisk" />

                <TextView
                    android:id="@+id/cold_risk_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cold_risk_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/cold_risk_title" />

                <TextView
                    android:id="@+id/cold_risk_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cold_risk_image"
                    app:layout_constraintTop_toBottomOf="@+id/cold_risk_name"
                    tools:text="不宜" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cold_risk"
                app:layout_constraintTop_toBottomOf="@id/tile">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dress_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_dressing" />

                <TextView
                    android:id="@+id/dress_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dress_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/dress_title" />

                <TextView
                    android:id="@+id/dress_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dress_image"
                    app:layout_constraintTop_toBottomOf="@+id/dress_name"
                    tools:text="不宜" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ultraviolet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/wash_car"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cold_risk">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ultraviolet_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_ultraviolet" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ultraviolet_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/ultraviolet_title" />

                <TextView
                    android:id="@+id/ultraviolet_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ultraviolet_image"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:text="不宜" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wash_car"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ultraviolet"
                app:layout_constraintTop_toBottomOf="@id/dress">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_carwashing" />

                <TextView
                    android:id="@+id/car_wash_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/car_washing_title" />

                <TextView
                    android:id="@+id/car_wash_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                    app:layout_constraintTop_toBottomOf="@+id/car_wash_name"
                    tools:text="不宜" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>